.provarCaches/00D410000011HE0EAM/objects/rstkf__gljd__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_gljh</customHelpPage>
    <description>gljd__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__gljd_gljh__r.rstkf__externalid__c  &amp; &apos;_&apos; &amp;  TEXT( rstkf__gljd_lineno__c )</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__gljd_gljh__r.Name &amp; &apos;-&apos; &amp;  TEXT( rstkf__gljd_lineno__c )</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_cramt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_cramtmcurr__c</fullName>
        <description>Credit Amount – Maintenance Currency</description>
        <label>Credit Amount – Maintenance Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_dimgridstorage__c</fullName>
        <description>gljd_dimgridstorage</description>
        <label>Grid Dimension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_dimvals__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dimensions</label>
        <referenceTo>rstk__dimvals__c</referenceTo>
        <relationshipLabel>Journal Entry Details</relationshipLabel>
        <relationshipName>gljds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_dramt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_dramtmcurr__c</fullName>
        <description>Debit Amount – Maintenance Currency</description>
        <label>Debit Amount – Maintenance Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Journal Entry Details</relationshipLabel>
        <relationshipName>gljds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_gldiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>Journal Entry Details</relationshipLabel>
        <relationshipName>gljds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_glfa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Fixed Asset</description>
        <label>Related Fixed Asset</label>
        <referenceTo>rstkf__glfa__c</referenceTo>
        <relationshipLabel>Journal Entry Details</relationshipLabel>
        <relationshipName>gljds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_gljh__c</fullName>
        <label>JE #</label>
        <referenceTo>rstkf__gljh__c</referenceTo>
        <relationshipLabel>Journal Entry Details</relationshipLabel>
        <relationshipName>gljds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_glproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>Journal Entry Details</relationshipLabel>
        <relationshipName>gljds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Z_OBSOLETE_Inventory Item Number</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Journal Entry Details</relationshipLabel>
        <relationshipName>gljds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_linecomment__c</fullName>
        <label>Comment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_lineno__c</fullName>
        <label>Line Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_postbalance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Posting Balance Transaction</description>
        <inlineHelpText>This field indicates this transaction was added by the posting process to bring groups of entries into balance. This occurs only in large Journal Batches exceeding 200 entries.</inlineHelpText>
        <label>Posting Balance Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_posted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Posted</description>
        <inlineHelpText>This field indicates this transaction has been posted. In large Journal batches (&gt; 200 entries), posting is done in groups.</inlineHelpText>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_postgroup__c</fullName>
        <description>Posting Group</description>
        <inlineHelpText>In large Journal batches posting is done in groups of not more than 200 entries. This field indicates the posting group to which this entry has been assigned.</inlineHelpText>
        <label>Posting Group</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_povend__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Z_OBSOLETE_Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Journal Entry Details</relationshipLabel>
        <relationshipName>gljds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_socust__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Z_OBSOLETE_Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Journal Entry Details</relationshipLabel>
        <relationshipName>gljds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljd_vatclass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field carries the VAT Class associated with the Journal Entry Detail.</inlineHelpText>
        <label>VAT Class</label>
        <referenceTo>rstk__syvatclass__c</referenceTo>
        <relationshipLabel>Journal Entry Details</relationshipLabel>
        <relationshipName>gljds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Journal Entry Detail</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__gljd_dramt__c</field>
            <operation>equals</operation>
            <value>200</value>
        </filters>
        <filters>
            <field>rstkf__gljd_glacct__c</field>
            <operation>contains</operation>
            <value>WOISS</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Journal_Entry_Details</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gljd_gljh__c</columns>
        <columns>rstkf__gljd_lineno__c</columns>
        <columns>rstkf__gljd_glacct__c</columns>
        <columns>rstkf__gljd_gldiv__c</columns>
        <columns>rstkf__gljd_glproj__c</columns>
        <columns>rstkf__gljd_dramt__c</columns>
        <columns>rstkf__gljd_cramt__c</columns>
        <columns>rstkf__gljd_dimvals__c</columns>
        <columns>rstkf__gljd_linecomment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__gljd_gldiv__c</field>
            <operation>contains</operation>
            <value>100</value>
        </filters>
        <filters>
            <field>rstkf__gljd_dramt__c</field>
            <operation>equals</operation>
            <value>200</value>
        </filters>
        <label>MS_Journal Entry Details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Journal_Entry_Details_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gljd_gljh__c</columns>
        <columns>rstkf__gljd_lineno__c</columns>
        <columns>rstkf__gljd_glacct__c</columns>
        <columns>rstkf__gljd_gldiv__c</columns>
        <columns>rstkf__gljd_glproj__c</columns>
        <columns>rstkf__gljd_dramt__c</columns>
        <columns>rstkf__gljd_cramt__c</columns>
        <columns>rstkf__gljd_dimvals__c</columns>
        <columns>rstkf__gljd_linecomment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Journal Entry Details - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journal Entry Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstkf__Account_must_be_of_same_company</fullName>
        <active>true</active>
        <description>Account_must_be_of_same_company</description>
        <errorConditionFormula>IF( NOT(ISBLANK(rstkf__gljd_glacct__c)) , rstkf__gljd_glacct__r.rstkf__glacct_cmpno__c != rstkf__gljd_gljh__r.rstkf__gljh_glyear__r.rstkf__glyear_cmpno__c,false)</errorConditionFormula>
        <errorMessage>Account must be of same company of Journal Entry Detail.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Account_must_not_be_NULL</fullName>
        <active>true</active>
        <description>Account_must_not_be_NULL</description>
        <errorConditionFormula>ISBLANK(rstkf__gljd_glacct__c)</errorConditionFormula>
        <errorMessage>Please Enter Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Division_must_be_of_Same_Company_as_of_G</fullName>
        <active>true</active>
        <description>Division must be of Same Company as of General Journal Entry Header.</description>
        <errorConditionFormula>IF( NOT(ISBLANK(rstkf__gljd_gldiv__c)) ,
rstkf__gljd_gldiv__r.rstkf__gldiv_glcmp__c != rstkf__gljd_gljh__r.rstkf__gljh_glyear__r.rstkf__glyear_cmpno__c, false)</errorConditionFormula>
        <errorMessage>Division must be of Same Company as of General Journal Entry Header.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Either_Debit_amount_or_Credit_amount_ca</fullName>
        <active>true</active>
        <description>Either Debit amount or Credit amount can be filled</description>
        <errorConditionFormula>AND((rstkf__gljd_dramt__c &gt; 0),(rstkf__gljd_cramt__c &gt; 0))</errorConditionFormula>
        <errorMessage>Either Debit amount or Credit amount can be filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__External_Id_can_not_be_modified</fullName>
        <active>true</active>
        <description>External_Id_can_not_be_modified</description>
        <errorConditionFormula>AND(NOT(ISNEW()), (rstkf__externalid__c = rstkf__formula_extid__c) ,ISCHANGED(rstkf__externalid__c) )</errorConditionFormula>
        <errorMessage>External Id can not be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Item_must_be_of_same_Division_of_General</fullName>
        <active>true</active>
        <description>Item must be of same Division of General Journal Entry Detail</description>
        <errorConditionFormula>IF( NOT(ISBLANK(rstkf__gljd_icitem__c)) , 	rstkf__gljd_icitem__r.rstk__icitem_div__c != rstkf__gljd_gldiv__r.rstkf__gldiv_sydiv__c,false)</errorConditionFormula>
        <errorMessage>Item must be of same Division of General Journal Entry Detail</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Journl_Header_must_not_be_NULL</fullName>
        <active>true</active>
        <description>Journl_Header_must_not_be_NULL</description>
        <errorConditionFormula>ISBLANK(rstkf__gljd_gljh__c)</errorConditionFormula>
        <errorMessage>Journl_Header_must_not_be_NULL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Line_No_can_not_be_Modified</fullName>
        <active>true</active>
        <description>Line No can not be Modified</description>
        <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(rstkf__gljd_lineno__c) )</errorConditionFormula>
        <errorDisplayField>rstkf__gljd_glacct__c</errorDisplayField>
        <errorMessage>Line No can not be Modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Line_No_can_not_be_Null</fullName>
        <active>true</active>
        <description>Line No can not be Null</description>
        <errorConditionFormula>ISBLANK( TRIM(TEXT(rstkf__gljd_lineno__c)))</errorConditionFormula>
        <errorMessage>Line No can not be Null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Please_enter_valid_Credit_amount</fullName>
        <active>false</active>
        <description>Please enter valid Credit amount</description>
        <errorConditionFormula>OR((ISBLANK(rstkf__gljd_cramt__c)),(rstkf__gljd_cramt__c &lt; 0))</errorConditionFormula>
        <errorMessage>Please enter valid Credit amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Please_enter_valid_Debit_amount</fullName>
        <active>false</active>
        <description>Please enter valid Debit amount</description>
        <errorConditionFormula>OR((ISBLANK(rstkf__gljd_dramt__c)),(rstkf__gljd_dramt__c &lt; 0))</errorConditionFormula>
        <errorDisplayField>rstkf__gljd_glacct__c</errorDisplayField>
        <errorMessage>Please enter valid Debit amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Project_must_be_of_same_Division_of_Gene</fullName>
        <active>true</active>
        <description>Project must be of same Division of General Journal Entry Detail</description>
        <errorConditionFormula>IF( NOT(ISBLANK(rstkf__gljd_glproj__c)) , rstkf__gljd_glproj__r.rstkf__glproj_gldiv__c != rstkf__gljd_gldiv__c,false)</errorConditionFormula>
        <errorMessage>Project must be of same Division of General Journal Entry Detail</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__VAT_Class_Company_Validation</fullName>
        <active>true</active>
        <description>The Company associated to VAT Class must match the Company associated with Journal Entry Header.</description>
        <errorConditionFormula>!ISBLANK(rstkf__gljd_vatclass__c) &amp;&amp; rstkf__gljd_vatclass__r.rstk__syvatclass_div__r.rstk__sydiv_cmpno__c != rstkf__gljd_gljh__r.rstkf__gljh_cmpno__r.rstkf__glcmp_cmpno__c</errorConditionFormula>
        <errorMessage>The Company associated to VAT Class must match the Company associated with Journal Entry Header.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__VAT_Class_Division_Validation</fullName>
        <active>true</active>
        <description>The Division associated with VAT Class must match the Division on Journal Entry Detail.</description>
        <errorConditionFormula>!ISBLANK(rstkf__gljd_gldiv__c) &amp;&amp; 
!ISBLANK(rstkf__gljd_vatclass__c) &amp;&amp; rstkf__gljd_vatclass__r.rstk__syvatclass_div__c != rstkf__gljd_gldiv__r.rstkf__gldiv_sydiv__c</errorConditionFormula>
        <errorMessage>The Division associated with VAT Class must match the Division on Journal Entry Detail.</errorMessage>
    </validationRules>
</CustomObject>